Use my real name

--- a/dev/license/index.html
+++ b/dev/license/index.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>License | Cedced19 </title>
+        <title>License | Cédric JUNG</title>
         <meta name="viewport" content="width=device-width">
         <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
         <meta name="author" content="Cedced19">
         <meta name="twitter:cars" content="summary">
-        <meta name="twitter:title" content="License">
+        <meta name="twitter:title" content="Cédric JUNG | License">
         <meta name="twitter:image" content="http://cedced19.github.io/profile.png">
         <meta name="twitter:site" content="@cedced19">
         <meta name="twitter:author" content="@cedced19">
-        <meta name="author" content="Cedced19">
-        <meta name="description" content="Cedced19's license. Node.js fan.">
+        <meta name="author" content="Cédric JUNG">
+        <meta name="description" content="Cédric JUNG's developer website. Node.js fan.">
+        <meta name="keywords" content="Cédric, JUNG, Developer, Node, JS, HTML, CSS, JavaScript">
         <meta property="og:type" content="website">
         <meta property="og:title" content="License">
         <meta property="og:image" content="http://cedced19.github.io/profile.png">
@@ -45,7 +46,7 @@
 
             <h2>The MIT License (MIT)</h2>
 
-            <h3>Copyright (c) 2014 Cédric</h3>
+            <h3>Copyright (c) 2014-2016 Cédric JUNG</h3>
 
             <p>Permission is hereby granted, free of charge, to any person obtaining a copy
                 of this software and associated documentation files (the “Software”), to deal
@@ -69,7 +70,7 @@
 
         <hr class="rule animate">
         <footer class="footer-wrap animate" role="complementary">
-            <p class="footer">Cedced19 - <a href="http://cedced19.github.io/license/">MIT</a></p>
+            <p class="footer">Cédric JUNG - <a href="http://cedced19.github.io/license/">MIT</a></p>
         </footer>
 
 
