--- a/dev/404.html
+++ b/dev/404.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>404 | Cedced19 </title>
+        <title>404 | Cédric JUNG</title>
         <meta name="viewport" content="width=device-width">
         <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-        <meta name="author" content="Cedced19">
+        <meta name="author" content="Cédric JUNG">
         <meta name="twitter:cars" content="summary">
-        <meta name="twitter:title" content="404">
+        <meta name="twitter:title" content="Cédric JUNG | 404">
         <meta name="twitter:image" content="http://cedced19.github.io/profile.png">
         <meta name="twitter:site" content="@cedced19">
         <meta name="twitter:author" content="@cedced19">
