--- a/dev/index.html
+++ b/dev/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Cedced19</title>
+        <title>Cédric JUNG</title>
         <meta name="viewport" content="width=device-width">
         <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-        <meta name="author" content="Cedced19">
+        <meta name="author" content="Cédric JUNG">
         <meta name="twitter:cars" content="summary">
-        <meta name="twitter:title" content="Cedced19">
+        <meta name="twitter:title" content="Cédric JUNG">
         <meta name="twitter:image" content="http://cedced19.github.io/profile.png">
         <meta name="twitter:site" content="@cedced19">
         <meta name="twitter:author" content="@cedced19">
-        <meta name="description" content="Cedced19's developer website. Node.js fan.">
-        <meta name="keywords" content="Cedced19, Developer, Node, JS, HTML, CSS, JavaScript">
+        <meta name="description" content="Cédric JUNG's developer website. Node.js fan.">
+        <meta name="keywords" content="Cédric, JUNG, Developer, Node, JS, HTML, CSS, JavaScript">
         <meta property="og:type" content="website">
         <meta property="og:image" content="http://cedced19.github.io/profile.png">
         <meta property="og:language" content="fr_FR">
@@ -28,7 +28,7 @@
     <body class="home">
         <header class="header" role="banner">
             <div class="masthead animate">
-                <h1>Cedced19</h1>
+                <h1>Cédric JUNG</h1>
                 <br>
                 <h2>Developer.</h2>
             </div>
@@ -37,18 +37,18 @@
 
         <main class="content-wrap animate" role="main">
             <p>
-                Hi!
-                You're on Cedced19's site, here there are a lot of useless software!
+                Hi,
+                I'm Cédric JUNG, you are on my website, here there are a lot of useless software!
                 Few of them can be usefull...
             </p>
             <p>
-                I'm a fan of <a href="http://nodejs.org/">Node.js</a>.
+                I'm a fan of <a href="//nodejs.org/">Node.js</a>.
             </p>
             <p>
                 I published also some applictions in <a href="https://play.google.com/store/apps/dev?id=8053368172585015347">Google Play</a>.
             </p>
             <p>
-                You can follow Cedced19 on <a href="//twitter.com/cedced19">Twitter</a> or <a href="mailto:cedced19@gmail.com">send an email to him</a>.
+                You can follow me on <a href="//twitter.com/cedced19">Twitter</a> or <a href="mailto:cedced19@gmail.com">send me an email</a>.
             </p>
 
             <h3>Google play applications</h3>
@@ -107,7 +107,7 @@
 
         <hr class="rule animate">
         <footer class="footer-wrap animate" role="complementary">
-            <p class="footer">Cedced19 - <a href="http://cedced19.github.io/license/">MIT</a></p>
+            <p class="footer">Cédric JUNG - <a href="http://cedced19.github.io/license/">MIT</a></p>
         </footer>
 
 
