Add Gulp serve system and change home page

--- a/demo/countdown-page/index.html
+++ b/demo/countdown-page/index.html
@@ -12,7 +12,7 @@
         <meta name="twitter:author" content="@cedced19">
         <meta name="twitter:description" content="A countdown.">
 
-        <meta name="author" content="Cedced19">
+        <meta name="author" content="Cédric JUNG">
         <meta name="description" content="A countdown.">
 
         <meta property="og:type" content="website">
