--- a/dev/index.html
+++ b/dev/index.html
@@ -29,33 +29,45 @@
         <header class="header" role="banner">
             <div class="masthead animate">
                 <h1>Cédric JUNG</h1>
-                <br>
                 <h2>Developer.</h2>
             </div>
             <span class="scroll-notice"></span>
         </header>
 
         <main class="content-wrap animate" role="main">
+            <img src="/profile.png" class="profile" />
             <p>
-                Hi,
-                I'm Cédric JUNG, you are on my website, here there are a lot of useless software!
-                Few of them can be usefull...
+                Hi,<br>
+                I'm Cédric JUNG and you are on my website.
             </p>
             <p>
-                I'm a fan of <a href="//nodejs.org/">Node.js</a>.
+                I'm living in France, and I'm really young (something like 15 years old). I code for fun since 2013.
             </p>
             <p>
-                I published also some applictions in <a href="https://play.google.com/store/apps/dev?id=8053368172585015347">Google Play</a>.
+                I started to code with <a href="//en.wikipedia.org/wiki/Visual_Basic">Visual Basic</a>. When I was playing Minecraft, I did some Java to change the game. To share those changes I wanted to
+                created a website therefore I used PHP. At first sight, PHP was pretty cool, but I quickly moved to JavaScript.
+            </p>
+            <p>
+                I'm a fan of JavaScript and specifically of <a href="//nodejs.org/">Node.js</a> (server-side JavaScript). I discovered this one some years ago, I use it everywhere in all my applications.
+                My applications are designed to satisfy my needs. So that's why I decide how I made them. However, you can contribute on Github, don't be shy!
+            </p>
+            <p>
+                All of my free software are open source, you can found them on <a href="//github.com/cedced19">Github</a>. They are licensed under the <a href="//cedced19.github.io/license/">MIT</a> license.
+                I choosed this one because I wanted to share my code and other kind of license were too much difficult for the users (if I want in the future to use my softwares I want to be able to do anything with).
             </p>
             <p>
                 You can follow me on <a href="//twitter.com/cedced19">Twitter</a> or <a href="mailto:cedced19@gmail.com">send me an email</a>.
+            </p>
+            <p>
+                Also I published some applictions in <a href="https://play.google.com/store/apps/dev?id=8053368172585015347">Google Play</a> thanks to <a href="//cordova.apache.org/">Cordova</a>.
+                All other projects can be found <a href="./projects">here</a>.
             </p>
 
             <h3>Google play applications</h3>
             <ol id="google-plays">
                 <li class="repo">
                     <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.learnmemorymobile" class="name-repo">Learn Memory Mobile</a>
-                    <p class="desc-repo">Download your lessons to get them offline!</p>
+                    <p class="desc-repo"><a href="//github.com/cedced19/learn-memory">Learn Memory</a> is a self-hosted website to save your lessons. This app allow you to download your lessons to get them offline on the phone.</p>
                     <span class="gray">JavaScript</span>
                 </li>
                 <li class="repo">
@@ -65,7 +77,7 @@
                 </li>
                 <li class="repo">
                     <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.listodomobile" class="name-repo">Listodo Mobile</a>
-                    <p class="desc-repo">Listodo is a self-hosted website to save your todo list.</p>
+                    <p class="desc-repo"><a href="//github.com/cedced19/listodo">Listodo</a> is a self-hosted website to save your todo list. This is a client app for your Listodo server.</p>
                     <span class="gray">JavaScript</span>
                 </li>
                 <li class="repo">
@@ -80,26 +92,7 @@
                 </li>
                 <li class="repo">
                     <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.raisealarmmobile" class="name-repo">Raise Alarm</a>
-                    <p class="desc-repo">A apllication to raise the alarm with a simple button.</p>
-                    <span class="gray">JavaScript</span>
-                </li>
-            </ol>
-
-            <h3>Repositories</h3>
-            <ol id="repos">
-            </ol>
-            <noscript><p>You had to enable Javascript to see this paragraph.</p></noscript>
-
-            <h3>Others</h3>
-            <ol id="others">
-                <li class="repo">
-                    <a href="demo/countdown-page/" class="name-repo">Countdown</a>
-                    <p class="desc-repo">A countdown.</p>
-                    <span class="gray">JavaScript</span>
-                </li>
-                <li class="repo">
-                    <a href="demo/greeting-birth/" class="name-repo">Greeting birth</a>
-                    <p class="desc-repo">A page for birth.</p>
+                    <p class="desc-repo">A apllication to raise the alarm with a simple button using <a href="//github.com/cedced19/raise-alarm">Raise Alarm</a> API.</p>
                     <span class="gray">JavaScript</span>
                 </li>
             </ol>
@@ -107,7 +100,7 @@
 
         <hr class="rule animate">
         <footer class="footer-wrap animate" role="complementary">
-            <p class="footer">Cédric JUNG - <a href="http://cedced19.github.io/license/">MIT</a></p>
+            <p class="footer">Cédric JUNG - <a href="./license/">MIT</a></p>
         </footer>
 
 
@@ -115,10 +108,6 @@
         <script type="text/javascript" src="scripts/jquery.min.js"></script>
         <script type="text/javascript" src="scripts/header.js"></script>
         <!-- endbuild -->
-        <!-- build:js scripts/github.min.js -->
-        <script type="text/javascript" src="scripts/github.js"></script>
-        <!-- endbuild -->
-
 
 
     </body>
