--- a/dev/license/index.html
+++ b/dev/license/index.html
@@ -8,7 +8,7 @@
         <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
         <meta name="author" content="Cedced19">
         <meta name="twitter:cars" content="summary">
-        <meta name="twitter:title" content="Cédric JUNG | License">
+        <meta name="twitter:title" content="License | Cédric JUNG">
         <meta name="twitter:image" content="http://cedced19.github.io/profile.png">
         <meta name="twitter:site" content="@cedced19">
         <meta name="twitter:author" content="@cedced19">
@@ -38,10 +38,6 @@
             <span class="scroll-notice"></span>
         </header>
 
-
-
-
-
         <main class="content-wrap animate" role="main">
 
             <h2>The MIT License (MIT)</h2>
@@ -70,7 +66,7 @@
 
         <hr class="rule animate">
         <footer class="footer-wrap animate" role="complementary">
-            <p class="footer">Cédric JUNG - <a href="http://cedced19.github.io/license/">MIT</a></p>
+            <p class="footer">Cédric JUNG - MIT</p>
         </footer>
 
 
