Fix miss spelling

--- a/dev/index.html
+++ b/dev/index.html
@@ -82,17 +82,17 @@
                 </li>
                 <li class="repo">
                     <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.tempspartour" class="name-repo">Temps par tour</a>
-                    <p class="desc-repo">A application to get quickly the time by turn.</p>
+                    <p class="desc-repo">An application to get quickly the time by turn.</p>
                     <span class="gray">JavaScript</span>
                 </li>
                 <li class="repo">
                     <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.happymulti" class="name-repo">Happy Multi</a>
-                    <p class="desc-repo">Happy multi is a application to learn the multiplication tables.</p>
+                    <p class="desc-repo">Happy multi is an application to learn the multiplication tables.</p>
                     <span class="gray">JavaScript</span>
                 </li>
                 <li class="repo">
                     <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.raisealarmmobile" class="name-repo">Raise Alarm</a>
-                    <p class="desc-repo">A apllication to raise the alarm with a simple button using <a href="//github.com/cedced19/raise-alarm">Raise Alarm</a> API.</p>
+                    <p class="desc-repo">An application to raise the alarm with a simple button using <a href="//github.com/cedced19/raise-alarm">Raise Alarm</a> API.</p>
                     <span class="gray">JavaScript</span>
                 </li>
             </ol>
