Use theme-color meta tag

--- a/dev/404.html
+++ b/dev/404.html
@@ -18,6 +18,10 @@
         <meta property="og:language" content="fr_FR">
         <meta property="og:url" content="cedced19.github.io">
 
+        <meta name="theme-color" content="#FF3300">
+        <meta name="msapplication-navbutton-color" content="#FF3300">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <!-- build:css /styles/styles.css -->
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <!-- endbuild -->
