--- a/dev/projects/index.html
+++ b/dev/projects/index.html
@@ -20,6 +20,10 @@
         <meta property="og:url" content="cedced19.github.io">
         <meta name="google-site-verification" content="daG8-WfmzTnxEOZ0gvyKhFVPyqGcp_MuANWkyM8THK8">
 
+        <meta name="theme-color" content="#27ae60">
+        <meta name="msapplication-navbutton-color" content="#27ae60">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <!-- build:css /styles/styles.css -->
         <link rel="stylesheet" type="text/css" href="../styles/main.css">
         <!-- endbuild -->
