--- a/dev/license/index.html
+++ b/dev/license/index.html
@@ -21,6 +21,10 @@
         <meta property="og:language" content="fr_FR">
         <meta property="og:url" content="cedced19.github.io">
 
+        <meta name="theme-color" content="#27ae60">
+        <meta name="msapplication-navbutton-color" content="#27ae60">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <!-- build:css /styles/styles.css -->
         <link rel="stylesheet" type="text/css" href="../styles/main.css">
         <!-- endbuild -->
