Change relative path to absolute path

--- a/dev/projects/index.html
+++ b/dev/projects/index.html
@@ -48,12 +48,12 @@
             <h3>Others</h3>
             <ol id="others">
                 <li class="repo">
-                    <a href="demo/countdown-page/" class="name-repo">Countdown</a>
+                    <a href="/demo/countdown-page/" class="name-repo">Countdown</a>
                     <p class="desc-repo">A countdown.</p>
                     <span class="gray">JavaScript</span>
                 </li>
                 <li class="repo">
-                    <a href="demo/greeting-birth/" class="name-repo">Greeting birth</a>
+                    <a href="/demo/greeting-birth/" class="name-repo">Greeting birth</a>
                     <p class="desc-repo">A page for birth.</p>
                     <span class="gray">JavaScript</span>
                 </li>
