--- a/dev/license/index.html
+++ b/dev/license/index.html
@@ -37,7 +37,7 @@
             <div class="masthead animate">
                 <h1>License</h1>
                 <br>
-                <h2>MIT</h2>
+                <h2>The MIT License and the Privacy Policy</h2>
             </div>
             <span class="scroll-notice"></span>
         </header>
@@ -66,6 +66,13 @@
                 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
                 SOFTWARE.</p>
 
+            <h2>Privacy Policy</h2>
+
+            <p>Cédric JUNG's software <b>do not collect</b> any personal information.</p>
+
+            <p>Any personal information stays on your phone when it is an Android application,
+              on your server when it is a software which run on your server,
+              on your PC when it is a software which run on your PC.</p>
         </main>
 
         <hr class="rule animate">
