Add latest Google Play applications

--- a/dev/index.html
+++ b/dev/index.html
@@ -99,6 +99,21 @@
                     <p class="desc-repo">An application to raise the alarm with a simple button using <a href="//github.com/cedced19/raise-alarm">Raise Alarm</a> API.</p>
                     <span class="gray">JavaScript</span>
                 </li>
+                <li class="repo">
+                    <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.sweetalarmactivator" class="name-repo">Sweet Alarm Activator</a>
+                    <p class="desc-repo">An application to enable or disable your alarm system.</p>
+                    <span class="gray">JavaScript</span>
+                </li>
+                <li class="repo">
+                    <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.warnfamily" class="name-repo">Warn Family</a>
+                    <p class="desc-repo">An application to warn automatically your family when you are moving by SMS.</p>
+                    <span class="gray">JavaScript</span>
+                </li>
+                <li class="repo">
+                    <a href="https://play.google.com/store/apps/details?id=io.github.cedced19.lamethodej" class="name-repo">La Méthode J</a>
+                    <p class="desc-repo">La méthode J is an application to apply a French method to learn a lesson over a long period of time.</p>
+                    <span class="gray">JavaScript</span>
+                </li>
             </ol>
         </main>
 
