--- a/dev/license/index.html
+++ b/dev/license/index.html
@@ -71,8 +71,8 @@
             <p>Cédric JUNG's software <b>do not collect</b> any personal information.</p>
 
             <p>Any personal information stays on your phone when it is an Android application,
-              on your server when it is a software which run on your server,
-              on your PC when it is a software which run on your PC.</p>
+              on your server when it is a software which runs on your server,
+              on your PC when it is a software which runs on your PC.</p>
         </main>
 
         <hr class="rule animate">
